# domain-engine

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE.md  README.md  docker-compose.yml  justfile
docs/ontol-documentation-preprocessor/: Cargo.toml
docs/ontol-documentation-preprocessor/src/: lib.rs  main.rs
domain-engine-core/: Cargo.toml  build.rs
domain-engine-core/src/: data_flow.rs  data_source.rs  data_store.rs  domain_engine.rs  domain_error.rs  entity_id_utils.rs  entity_query.rs  in_memory.rs  in_memory_tests.rs  lib.rs  match_utils.rs  query_data_flow.rs  resolve_path.rs  select_data_flow.rs  system.rs  tests.rs  value_generator.rs
domain-engine-core/src/filter/: condition_utils.rs  disjoint_clause_sets.rs  mod.rs  plan.rs  walk_plan.rs
domain-engine-core/src/in_memory_store/: api.rs  filter.rs  in_memory_core.rs  in_memory_filter.rs  in_memory_query.rs  in_memory_tests.rs  in_memory_write.rs  mod.rs  store.rs
domain-engine-core/tests/template/: main.rs
domain-engine-juniper/: Cargo.toml  build.rs
domain-engine-juniper/src/: adapter.rs  context.rs  cursor_util.rs  field.rs  gql_scalar.rs  input.rs  input_value_deserializer.rs  lib.rs  look_ahead_utils.rs  macros.rs  query_analyzer.rs  registry_ctx.rs  registry_utils.rs  registry_wrapper.rs  resolve.rs  schema_ctx.rs  select_analyzer.rs  selection_analyzer.rs  value_serializer.rs  virtual_registry.rs
domain-engine-juniper/src/adapter/: adapt.rs  build.rs  data.rs  data2.rs  mod.rs  names.rs  namespace.rs
domain-engine-juniper/src/graphql/: adapter.rs  macros.rs  mod.rs  type_info.rs
domain-engine-juniper/src/new_templates/: indexed_input_value.rs  indexed_type.rs  mod.rs  mutation.rs  query.rs
domain-engine-juniper/src/templates/: attribute_type.rs  connection.rs  custom_scalar.rs  edge.rs  indexed_input_value.rs  indexed_type.rs  input_type.rs  map_input_value.rs  map_type.rs  mod.rs  mutation.rs  mutation_type.rs  node.rs  page_info_type.rs  query.rs  query_type.rs  sequence_type.rs  union.rs
domain-engine-juniper/src/virtual_schema/: argument.rs  builder.rs  data.rs  mod.rs  namespace.rs  schema.rs
domain-engine-juniper/tests/graphql-integration/: main.rs  parser_document_utils.rs  templates.rs  test_basic.rs  test_graphql_basic.rs  test_graphql_conduit.rs  test_graphql_demo.rs  test_graphql_in_memory.rs  test_graphql_input.rs  test_input.rs
domain-engine-test-utils/: Cargo.toml
domain-engine-test-utils/src/: graphql.rs  graphql_test_utils.rs  lib.rs
domain-engine-wasm/: Cargo.toml  README.md
domain-engine-wasm/src/: graphql.rs  lib.rs  wasm_domain.rs  wasm_domain_engine.rs  wasm_error.rs  wasm_gc.rs  wasm_graphql.rs  wasm_util.rs
domain-engine/domain-engine-arrow/: Cargo.toml
domain-engine/domain-engine-arrow/src/: arrow_http.rs  batch_builder.rs  lib.rs  schema.rs
domain-engine/domain-engine-core/: Cargo.toml
domain-engine/domain-engine-core/src/: crdt_util.rs  data_store.rs  domain_engine.rs  domain_error.rs  domain_select.rs  entity_id_utils.rs  lib.rs  make_interfacable.rs  make_storable.rs  match_utils.rs  object_generator.rs  search.rs  select_data_flow.rs  system.rs  transact.rs  transaction.rs  update.rs
domain-engine/domain-engine-datafusion/: Cargo.toml
domain-engine/domain-engine-datafusion/src/: arrow.rs  arrow_codec.rs  filter.rs  lib.rs  table.rs  tests_datastore.rs  tests_filter.rs
domain-engine/domain-engine-graphql/: Cargo.toml
domain-engine/domain-engine-graphql/src/: context.rs  cursor_util.rs  gql_scalar.rs  lib.rs  look_ahead_utils.rs  macros.rs  ontology_schema.rs  registry_ctx.rs  select_analyzer.rs
domain-engine/domain-engine-grpc/: Cargo.toml
domain-engine/domain-engine-grpc/src/: lib.rs
domain-engine/domain-engine-httpjson/: Cargo.toml
domain-engine/domain-engine-httpjson/src/: content_type.rs  http_error.rs  lib.rs
domain-engine/domain-engine-in-memory-store/: Cargo.toml
domain-engine/domain-engine-juniper/: Cargo.toml
domain-engine/domain-engine-store-arango/: Cargo.toml  build.rs
domain-engine/domain-engine-store-pg/: Cargo.toml
domain-engine/domain-engine-tantivy/: Cargo.toml
domain-engine/domain-engine-test-utils/: Cargo.toml
domain-engine/domain-service/: Cargo.toml
domain-service/: Cargo.toml
domain-service/src/: graphql.rs  main.rs
onmap/: Cargo.toml
onmap/src/: main.rs
ontol-cli/: Cargo.toml
ontol-cli/src/: main.rs
ontol-compiler/: Cargo.toml
ontol-compiler/src/: binding.rs  codegen.rs  compiler.rs  compiler_queries.rs  core.rs  def.rs  ena.rs  error.rs  expr.rs  hir_node.rs  ir_node.rs  lib.rs  lowering.rs  map.rs  map_arm_def_inference.rs  namespace.rs  ontol.rs  ontol_domain.rs  ontology_graph.rs  package.rs  pattern.rs  patterns.rs  primitive.rs  regex.rs  regex_util.rs  relation.rs  repr_check.rs  rewrite.rs  s_lowering.rs  sequence.rs  serde_codegen.rs  source.rs  strings.rs  text_patterns.rs  thesaurus.rs  tuple.rs  type_check.rs  typed_expr.rs  typed_hir.rs  types.rs  (+1 more)
ontol-faker/: Cargo.toml
ontol-faker/src/: lib.rs
ontol-lsp/: .gitignore  Cargo.toml  package-lock.json  package.json
ontol-lsp/src/: docs.rs  lib.rs  state.rs  wasm.rs
ontol-parser/: Cargo.toml
ontol-parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs
ontol-runtime/: Cargo.toml
ontol-runtime/src/: cast.rs  condition.rs  config.rs  debug.rs  discriminator.rs  env.rs  equality.rs  format_utils.rs  json_schema.rs  lib.rs  mapping_vm.rs  ontology.rs  proc.rs  property.rs  property_probe.rs  query.rs  resolve_path.rs  select.rs  sequence.rs  string_pattern.rs  string_types.rs  text.rs  text_like_types.rs  text_pattern.rs  translate.rs  translation.rs  value.rs  value_generator.rs  var.rs  vm.rs
ontol-test-utils/: Cargo.toml
ontol-test-utils/src/: diagnostics.rs  examples.rs  json_utils.rs  lib.rs  serde_helper.rs  serde_utils.rs  test_extensions.rs  test_map.rs  type_binding.rs
ontool/: Cargo.toml
ontool/benches/: criterion_benches.rs
ontool/src/: graphql.rs  lib.rs  main.rs  ontology_schema.rs  service.rs
ontos/: Cargo.toml
ontos/src/: display.rs  kind.rs  lib.rs  lower.rs  parse.rs  visitor.rs
(+1214 files in other folders)
