[workspace]
members = [
    "domain-engine/domain-engine-core",
    "domain-engine/domain-engine-in-memory-store",
    "domain-engine/domain-engine-graphql",
    "domain-engine/domain-engine-grpc",
    "domain-engine/domain-engine-test-templates",
    "domain-engine/domain-engine-test-utils",
    "ontol/ontol-compiler",
    "ontol/ontol-faker",
    "ontol/ontol-hir",
    "ontol/ontol-lsp",
    "ontol/ontol-macros",
    "ontol/ontol-parser",
    "ontol/ontol-runtime",
    "ontol/ontol-syntax",
    "ontol/ontol-test-utils",
    "ontool",
    "onmap",
    "docs/ontol-documentation-preprocessor",
]
resolver = "2"

[workspace.dependencies]
fnv = "1"
indexmap = "2"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
smallvec = "1"
itertools = "0.11"
uuid = "1.6"
tokio = { version = "1", features = ["macros", "rt"] }
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3.4", features = ["derive"] }
bitflags = { version = "2", features = ["serde"] }
bit-set = "0.5"
thin-vec = { version = "0.2", features = ["serde"] }
regex-automata = "0.4"
arcstr = { version = "1", features = ["serde"] }
ordered-float = { version = "4", features = ["serde"] }
unimock = "0.6"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
