[workspace]
members = [
    "domain-engine/domain-engine-arrow",
    "domain-engine/domain-engine-core",
    "domain-engine/domain-engine-datafusion",
    "domain-engine/domain-engine-graphql",
    "domain-engine/domain-engine-grpc",
    "domain-engine/domain-engine-httpjson",
    "domain-engine/domain-engine-store-arango",
    "domain-engine/domain-engine-store-inmemory",
    "domain-engine/domain-engine-store-pg",
    "domain-engine/domain-engine-tantivy",
    "domain-engine/domain-engine-test-utils",
    "ontol/ontol-compiler",
    "ontol/ontol-examples",
    "ontol/ontol-faker",
    "ontol/ontol-hir",
    "ontol/ontol-lsp",
    "ontol/ontol-lsp-wasm",
    "ontol/ontol-macros",
    "ontol/ontol-parser",
    "ontol/ontol-runtime",
    "ontol/ontol-syntax",
    "ontol/ontol-test-utils",
    "ontool",
    "onmap",
    "docs/ontol-documentation-preprocessor",
]
resolver = "2"

[workspace.dependencies]
fnv = "1"
indexmap = "2"
serde = "1"
serde_json = "1"
smallvec = "2.0.0-alpha.6"
itertools = "0.13"
uuid = "1.6"
ulid = "1.1"
tokio = { version = "1", features = ["macros", "rt"] }
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3.4", features = ["derive"] }
bitflags = { version = "2", features = ["serde"] }
bit-set = "0.8"
thin-vec = { version = "0.2", features = ["serde"] }
regex-automata = "0.4"
arcstr = { version = "1", features = ["serde"] }
ordered-float = { version = "4", features = ["serde"] }
unimock = "0.6"
rstest = { version = "0.23", default-features = false }
postcard = { version = "1", default-features = false, features = ["use-std"] }

[workspace.dependencies.juniper]
git = "https://github.com/protojour/juniper"
branch = "protojour-mods"
default-features = false
features = ["schema-language", "chrono"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
