[package]
name = "domain-engine-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
ontol-runtime.path = "../ontol-runtime"
ontol-compiler.path = "../ontol-compiler"
smartstring.workspace = true
thiserror.workspace = true
tracing.workspace = true
indexmap.workspace = true
fnv.workspace = true
itertools.workspace = true
uuid = { workspace = true, features = ["v4"] }
tokio = { workspace = true, features = ["sync"] }
async-trait.workspace = true
chrono.workspace = true
smallvec.workspace = true
serde = "1"
serde_json = "1"
unimock = "0.5"
bit-set = "0.5"

[dev-dependencies]
ontol-test-utils.path = "../ontol-test-utils"
test-log.workspace = true
tracing-subscriber.workspace = true
pretty_assertions = "1"
