[package]
name = "domain-engine-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
ontol-runtime.path = "../ontol-runtime"
ontol-compiler.path = "../ontol-compiler"
smartstring.workspace = true
thiserror.workspace = true
tracing.workspace = true
indexmap.workspace = true
fnv.workspace = true
itertools.workspace = true
uuid = { workspace = true, features = ["v4", "v7"] }
tokio = { workspace = true, features = ["sync"] }
async-trait.workspace = true
chrono.workspace = true
smallvec.workspace = true
bit-set.workspace = true
serde = "1"
serde_json = "1"
unimock = "0.5"
ordered-float = "4"
anyhow = "1"
bincode = "1"

[dev-dependencies]
ontol-test-utils.path = "../ontol-test-utils"
domain-engine-test-utils.path = "../domain-engine-test-utils"
test-log.workspace = true
tracing-subscriber.workspace = true
pretty_assertions = "1"

[build-dependencies]
domain-engine-test-templates.path = "../domain-engine-test-templates"
