[package]
name = "domain-engine-juniper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
ontol-runtime.path = "../ontol-runtime"
domain-engine-core.path = "../domain-engine-core"
tracing.workspace = true
smartstring.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
fnv.workspace = true
juniper = { git = "https://github.com/protojour/juniper", branch = "protojour-mods", default-features = false, features = ["schema-language"] }
convert_case = "0.6"

[dev-dependencies]
ontol-test-utils.path = "../ontol-test-utils"
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tokio = { version = "1", features = ["macros", "rt"] }
async-trait = "0.1"
pretty_assertions = "1"
unimock = "0.5"