[package]
name = "domain-engine-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
ontol-runtime.path = "../ontol-runtime"
ontol-compiler.path = "../ontol-compiler"
domain-engine-juniper.path = "../domain-engine-juniper"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.5"
unimock = "0.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"
