[package]
name = "domain-service"
version = "0.1.0"
edition = "2021"

[dependencies]
domain-engine-juniper.path = "../domain-engine-juniper"
domain-engine-core.path = "../domain-engine-core"
ontol-runtime.path = "../ontol-runtime"
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bincode.workspace = true
chrono.workspace = true
smartstring.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
axum = "0.6"
anyhow = "1"
tower-http = { version = "0.4", features = ["trace"] }
tikv-jemallocator = "0.5"

[dependencies.juniper_axum]
git = "https://github.com/protojour/juniper"
branch = "protojour-mods"
