[package]
name = "onmap"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
domain-engine-core.path = "../domain-engine/domain-engine-core"
ontol-runtime.path = "../ontol/ontol-runtime"
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
anyhow = "1"
clap-stdin = "0.6"

[[bin]]
name = "onmap"
path = "src/main.rs"
