[package]
name = "ontol-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
ontol-hir.path = "../ontol-hir"
ontol-runtime.path = "../ontol-runtime"
ontol-parser.path = "../ontol-parser"
fnv.workspace = true
indexmap.workspace = true
serde.workspace = true
smartstring.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true
chumsky.workspace = true
fraction = "0.13"
ena = "0.14"
bumpalo = "3"
regex-syntax = "0.6"
regex = "1"
patricia_tree = "0.6"
bit-set = "0.5"
derive-debug-extras = { version = "0.2", features = ["auto-debug-single-tuple-inline"] }
ordered-float = "3"

[dev-dependencies]
ontol-test-utils.path = "../ontol-test-utils"
serde_json.workspace = true
tracing-subscriber.workspace = true
test-log.workspace = true
assert_matches = "1"
pretty_assertions = "1"
indoc = "2"
unimock = "0.5"
