[package]
name = "ontol-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
ontol-macros.path = "../ontol-macros"
ontol-hir.path = "../ontol-hir"
ontol-runtime.path = "../ontol-runtime"
ontol-parser.path = "../ontol-parser"
fnv.workspace = true
indexmap.workspace = true
serde.workspace = true
smartstring.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true
chumsky.workspace = true
either.workspace = true
bit-set.workspace = true
thin-vec.workspace = true
regex-automata.workspace = true
arcstr.workspace = true
bitflags.workspace = true
ordered-float.workspace = true
ena = "0.14"
bumpalo = "3"
regex-syntax = "0.8"
patricia_tree = "0.8"
convert_case = "0.6"
documented = "0.3.0"
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"

[dev-dependencies]
ontol-test-utils.path = "../ontol-test-utils"
serde_json.workspace = true
tracing-subscriber.workspace = true
test-log.workspace = true
assert_matches = "1"
pretty_assertions = "1"
indoc = "2"
unimock = "0.5"
serde-value = "0.7"
