[package]
name = "ontol-faker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
ontol-runtime.path = "../ontol-runtime"
tracing.workspace = true
smartstring.workspace = true
fake = { version = "2", features = ["uuid", "chrono", "bigdecimal_rs"] }
rand = { version = "0.8", features = ["std_rng"] }
rand_regex = "0.15"
regex-syntax = "0.6"

[dev-dependencies]
