[package]
name = "ontol-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ontol-runtime.path = "../ontol-runtime"
chumsky = "0.9"
smartstring = { version = "1", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
assert_matches = "1"
