[package]
name = "ontol-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
smartstring.workspace = true
smallvec.workspace = true
tracing.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
fnv.workspace = true
uuid.workspace = true
chrono.workspace = true
num = "0.4"
serde-value = "0.7"
derive-debug-extras = { version = "0.2", features = ["auto-debug-single-tuple-inline"] }
time = { version = "0.3", features = ["serde-well-known"] }
regex = "1"
bitflags = "2"
urlencoding = "2"

[dev-dependencies]
tracing-subscriber.workspace = true
test-log.workspace = true
