[package]
name = "ontol-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
smartstring = { workspace = true, features = ["serde"] }
smallvec = { workspace = true, features = ["serde"] }
indexmap = { workspace = true, features = ["serde"] }
tracing.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
fnv.workspace = true
uuid.workspace = true
chrono.workspace = true
bitflags.workspace = true
bit-set.workspace = true
num = { version = "0.4", features = ["serde"] }
serde-value = "0.7"
derive-debug-extras = { version = "0.2", features = ["auto-debug-single-tuple-inline"] }
time = { version = "0.3", features = ["serde-well-known"] }
regex = "1"
urlencoding = "2"
bit-vec = { version = "0.6", features = ["serde"] }
thin-vec = { version = "0.2", features = ["serde"] }
bincode = "1"
thiserror = "1"

[dev-dependencies]
tracing-subscriber.workspace = true
test-log.workspace = true
