[package]
name = "ontol-test-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
ontol-compiler.path = "../ontol-compiler"
ontol-runtime.path = "../ontol-runtime"
tracing.workspace = true
pretty_assertions = "1"
serde.workspace = true
serde_json.workspace = true
jsonschema = { version = "0.17", default-features = false, features = ["draft202012"] }
