[package]
name = "ontool"
version = "0.1.0"
edition = "2021"

[dependencies]
domain-engine-juniper.path = "../domain-engine/domain-engine-juniper"
ontol-compiler.path = "../ontol-compiler"
ontol-parser.path = "../ontol-parser"
ontol-runtime.path = "../ontol-runtime"
ontol-lsp.path = "../ontol-lsp"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
ariadne = { version = "0.4.0", features = ["auto-color"] }
tower-lsp = "0.20.0"
tokio = { workspace = true, features = ["full"] }
notify-debouncer-full = "0.3.1"
futures = "0.3"
tempfile = "3.5.0"
domain-engine-core.path = "../domain-engine/domain-engine-core"
domain-engine-in-memory-store.path = "../domain-engine/domain-engine-in-memory-store"
chrono.workspace = true
smartstring.workspace = true
async-trait.workspace = true
axum = "0.6"
anyhow = "1"
tower-http = { version = "0.4", features = ["trace"] }
tikv-jemallocator = "0.5"

[dependencies.juniper_axum]
git = "https://github.com/protojour/juniper"
branch = "protojour-mods"
