[package]
name = "ontool"
version = "0.1.0"
edition = "2021"

[dependencies]
domain-engine-graphql.path = "../domain-engine/domain-engine-graphql"
ontol-compiler.path = "../ontol/ontol-compiler"
ontol-parser.path = "../ontol/ontol-parser"
ontol-runtime.path = "../ontol/ontol-runtime"
ontol-lsp.path = "../ontol/ontol-lsp"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
ariadne = { version = "0.4.0", features = ["auto-color"] }
tower-lsp = "0.20.0"
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7.10"
notify-debouncer-full = "0.3.1"
futures = "0.3"
tempfile = "3.5.0"
domain-engine-core.path = "../domain-engine/domain-engine-core"
domain-engine-store-inmemory.path = "../domain-engine/domain-engine-store-inmemory"
chrono.workspace = true
async-trait.workspace = true
axum = { version = "0.7", features = ["ws"] }
http-body = "1"
bytes = "1"
anyhow = "1"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tikv-jemallocator = "0.5"
tower-service = "0.3.2"
crossterm = "0.27.0"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "brotli",
  "gzip",
  "deflate",
  "stream",
  "rustls-tls",
] }


[dependencies.juniper]
git = "https://github.com/protojour/juniper"
branch = "protojour-mods"
default-features = false
features = ["schema-language"]

[dependencies.juniper_axum]
git = "https://github.com/protojour/juniper"
branch = "protojour-mods"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
ontol-test-utils.path = "../ontol/ontol-test-utils"
domain-engine-test-utils.path = "../domain-engine/domain-engine-test-utils"
indoc = "2"

[[bench]]
name = "criterion_benches"
harness = false
