[package]
name = "ontool"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
crossterm = ["dep:crossterm"]
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
domain-engine-graphql.path = "../domain-engine/domain-engine-graphql"
domain-engine-httpjson.path = "../domain-engine/domain-engine-httpjson"
ontol-compiler.path = "../ontol/ontol-compiler"
ontol-core.path = "../ontol/ontol-core"
ontol-parser.path = "../ontol/ontol-parser"
ontol-runtime.path = "../ontol/ontol-runtime"
ontol-lsp.path = "../ontol/ontol-lsp"
ontol-examples.path = "../ontol/ontol-examples"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
ariadne = { version = "0.5.0", features = ["auto-color"] }
tower-lsp = "0.20.0"
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7.10"
notify-debouncer-full = "0.5"
futures = "0.3"
tempfile = "3.5.0"
domain-engine-core.path = "../domain-engine/domain-engine-core"
domain-engine-store-inmemory.path = "../domain-engine/domain-engine-store-inmemory"
chrono.workspace = true
async-trait.workspace = true
axum = { version = "0.8", features = ["ws"] }
http-body = "1"
bytes = "1"
anyhow = "1"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tikv-jemallocator = { version = "0.6", optional = true }
tower-service = "0.3.2"
crossterm = { version = "0.29", optional = true, default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "brotli",
  "gzip",
  "deflate",
  "stream",
  "rustls-tls",
] }
ulid = "1"

[dependencies.juniper]
git = "https://github.com/protojour/juniper"
branch = "protojour-mods"
default-features = false
features = ["schema-language"]

[dependencies.juniper_axum]
git = "https://github.com/protojour/juniper"
branch = "protojour-mods"

[dev-dependencies]
criterion = { version = "0.6", default-features = false }
ontol-test-utils.path = "../ontol/ontol-test-utils"
ontol-examples.path = "../ontol/ontol-examples"
domain-engine-test-utils.path = "../domain-engine/domain-engine-test-utils"
indoc = "2"

[[bench]]
name = "criterion_benches"
harness = false
