[package]
name = "ontos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
ontol-runtime.path = "../ontol-runtime"

[dev-dependencies]
tracing-subscriber.workspace = true
test-log.workspace = true
pretty_assertions = "1"
