[package]
name = "ontol-documentation-preprocessor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.12", features = ["cargo", "wrap_help"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
mdbook = { version = "0.4.37", default_features = false }
semver = "1.0.17"

ontol-compiler = { path = "../../ontol/ontol-compiler" }
ontol-runtime = { path = "../../ontol/ontol-runtime" }
