[package]
name = "domain-engine-arrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
ontol-runtime.path = "../../ontol/ontol-runtime"
domain-engine-core.path = "../domain-engine-core"
chrono.workspace = true
serde.workspace = true
tracing.workspace = true
arrow-array = "53"
arrow-ipc = "53"
arrow-schema = { version = "53", features = ["serde"] }
async-stream = "0.3"
bytes = "1"
flatbuffers = "24"
futures-util = "0.3"
