[package]
name = "domain-engine-arrow"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
ontol-runtime.path = "../../ontol/ontol-runtime"
domain-engine-core.path = "../domain-engine-core"
chrono.workspace = true
serde.workspace = true
tracing.workspace = true
arrow-array = "54"
arrow-ipc = "54"
arrow-schema = { version = "54", features = ["serde"] }
async-stream = "0.3"
bytes = "1"
flatbuffers = "24"
futures-util = "0.3"
