[package]
name = "domain-engine-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
unimock = ["dep:unimock"]

[dependencies]
ontol-runtime.path = "../../ontol/ontol-runtime"
anyhow = "1"
thiserror.workspace = true
tracing.workspace = true
fnv.workspace = true
itertools.workspace = true
uuid = { workspace = true, features = ["v4", "v7"] }
async-trait.workspace = true
chrono.workspace = true
unimock = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
futures-util = "0.3"
tokio = { workspace = true, features = ["sync"] }
async-stream = "0.3"
displaydoc = "0.2"
smallvec = { version = "2.0.0-alpha.7", features = ["std"] }

[dev-dependencies]
ontol-macros.path = "../../ontol/ontol-macros"
ontol-test-utils.path = "../../ontol/ontol-test-utils"
ontol-examples.path = "../../ontol/ontol-examples"
domain-engine-test-utils.path = "../domain-engine-test-utils"
tracing-subscriber.workspace = true
pretty_assertions = "1"
