[package]
name = "domain-engine-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[features]
unimock = ["dep:unimock"]

[dependencies]
ontol-runtime.path = "../../ontol/ontol-runtime"

anyhow = "1"
async-stream = "0.3"
async-trait.workspace = true
automerge = "0.5"
chrono.workspace = true
displaydoc = "0.2"
futures-util = "0.3"
fnv.workspace = true
itertools.workspace = true
postcard.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec = { version = "2.0.0-alpha.7", features = ["std"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
ulid.workspace = true
unimock = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4", "v7"] }

[dev-dependencies]
ontol-macros.path = "../../ontol/ontol-macros"
ontol-test-utils.path = "../../ontol/ontol-test-utils"
ontol-examples.path = "../../ontol/ontol-examples"
domain-engine-test-utils.path = "../domain-engine-test-utils"
tracing-subscriber.workspace = true
pretty_assertions = "1"
