[package]
name = "domain-engine-datafusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
ontol-runtime.path = "../../ontol/ontol-runtime"
domain-engine-core.path = "../domain-engine-core"
domain-engine-arrow.path = "../domain-engine-arrow"
tracing.workspace = true
chrono.workspace = true
arrow = { version = "53", default-features = false }
async-stream = "0.3"
async-trait = "0.1"
datafusion-catalog = "43"
datafusion-common = "43"
datafusion-expr = "43"
datafusion-execution = "43"
datafusion-physical-expr = "43"
datafusion-physical-plan = "43"
futures-util = "0.3"

[dev-dependencies]
ontol-test-utils.path = "../../ontol/ontol-test-utils"
ontol-macros.path = "../../ontol/ontol-macros"
ontol-examples.path = "../../ontol/ontol-examples"
domain-engine-test-utils.path = "../domain-engine-test-utils"
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
datafusion = { version = "43", default-features = false }
indoc = "2"
pretty_assertions = "1"
bytes = "1"
